--- a/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
@@ -971,44 +971,44 @@ austral.266.a:0 "여기서 우리는 함께한다"
 austral.267.t:0 "존 커틴의 방문"
 austral.267.d:0 "오늘 오스트랄라시아의 존 커틴 총리는 오스트랄라시아가 맺은 협상국과 캐나다와의 협정을 확언하기 위해 오타와에 도착했습니다. 그는 하원에서의 연설에서 '지난 10년간의 사건들은 오스트랄라시아와 캐나다를 이전의 그 어느 때보다도 더욱 가깝게 했습니다. 캐나다는 생디칼리즘으로부터의 자유를 얻으려는 이 긴 싸움에서 함께 해온 모든 이들의 자부심의 원천입니다.' 라고 발언했습니다. 그의 연설에 우레와 같은 박수를 받은 이후 그는 총리와 국왕 에드워드 8세와 협상국의 현안에 대해 대화하기 위해 개인적으로 찾아갔습니다."
 austral.267.a:0 "오스트랄라시아는 여전히 충실한 동맹이다 "
-austral.300.t:0 "Prince George Killed in Crash"
-austral.300.d:0 "A recent crash by a small plane on its way to New Zealand claimed several lives - among them the Governor General of [Root.GetNameDef], Prince George. The country is in mourning, angered by the loss of the young prince, and a royal commission is currently looking into the cause of the disaster... even though, truth be told, little wreckage has been found in the Pacific waters after weeks of search. In the meantime, the prince's elder brother - Prince Henry, the Duke of Gloucester - has arrived in [Root.GetNameDef] as his replacement. Sadly, Prince Henry's first act as Governor General will be to attend the funeral for his brother."
-austral.300.a:0 "A sad loss"
-austral.301.t:0 "Death of Joseph Lyons"
-austral.301.d:0 "Today, the Australasian Parliament mourns the loss of Joseph A. Lyons. He is remembered fondly by all sides of politics, despite defecting from the Labor party and becoming one of the leaders of the Nationalist party. His legacy however will be one of hardship and determination, which was shown when he, along with Stanley Bruce, continued to push for democratic elections at the risk of dismissal. He was also partially responsible for implementing policies to help alleviate the worst of the depression and, despite the failure of the Nationalists, he was seen fondly amongst many of the general populace for making the best of what he had."
-austral.301.a:0 "He shall be missed"
-austral.302.t:0 "Fred Paterson Shot!"
-austral.302.d:0 "As the Australasian Council of Trade Unions prepares itself for the coming first Congress, the government has become a hotbed of infighting and political manoeuvring. Perhaps as a result of this, syndicalist leader Fred Paterson was shot earlier this morning while exiting his offices in Canberra. Rushed immediately to hospital, Paterson was pronounced in good condition and is expected to make a swift recovery, though the assailant has yet to be caught. Calls have gone out from the highest levels of the ACTU appealing for calm and an orderly transition of power once the Congress is held."
-austral.302.a:0 "How dreadful"
-austral.303.t:0 "Resignation of Stanley Bruce"
-austral.303.d.gov:0 "After 23 years of politics and controversy, Prime Minister Stanley Bruce has decided to step down as leader of the United Australasia Party. This has thrown his party into considerable chaos, with several declaring his decision untimely, and an immediate struggle has begun to find his replacement."
-austral.303.d.notgov:0 "After 23 years of politics and controversy, Stanley Bruce has decided to step down as leader of the United Australasia Party. This has thrown his party into considerable chaos as they search for a replacement, though there appears to be a consensus that it was Bruce's lack of leadership which led to the party's current status. They see this as an opportunity for the UAP's renewal."
-austral.303.a:0 "Robert Menzies steps up as the new UAP leader"
-austral.303.b:0 "Sidney Holland becomes the first New Zealander to lead the party"
-austral.304.t:0 "Collapse of the UAP/Country Coalition"
-austral.304.d:0 "Earle Page, dissatisfied with the election of Robert Menzies as leader of the United Australasia Party, has launched a scathing attack on Menzies' integrity stating, 'the Australiasian Government needs a leader with not merely the qualities I have mentioned, but also the three essential qualities of courage, loyalty, and judgement.' The coalition between the UAP and the Country party appears to be at a permanent end, with Page severing all agreements between the parties effective immediately."
-austral.304.a:0 "What a mess"
-austral.305.t:0 "Page Removed as ACP Leader"
-austral.305.d:0 "Infighting within the Country Party over the end of the coalition with UAP has reached its apex, with the party unanimously removing Earle Page as leader and replacing him with Arthur Fadden."
-austral.305.a:0 "Interesting"
-austral.306.t:0 "J.B. Miles Resigns"
-austral.306.d:0 "Due to his decreasing health and enduring a series of leadership arguments which have rocked the Australasian Council of Trade Unions, J.B. Miles finally agreed to resign his position as leader of the Maximists. Before his resignation Miles was virtually powerless as the Chairman, with those who suggesting that his successor, Lance Sharkey, was the one who slowly eroded Miles' leadership. What has been broadcast so far implies and that Miles' resignation was far from willing, but questions regarding the matter are so far very few. Despite this Miles has reaffirmed his commitment to the Maximists and will continue to support them."
-austral.306.a:0 "Too bad"
-austral.307.t:0 "Death of David Murray Anderson"
-austral.307.d:0 "Today all flags within Sydney are being flow at half-mast after the sudden death of Sir David Murray Anderson. Sir Anderson, the current sitting governor of New South Wales, is most famously known for his successful evacuation of the British Colonies in the East Indies, saving thousands of lives as well as a large portion of the British Pacific Fleet. While Sir Anderson has been ill for some time, leaving Sir Phillip Street to fill in for his public appearances, he has been vocal in supporting the Australasian Guard as 'the only right-thinking men in Australasia' who would be capable of enacting his plans to retake the East Indies. His death has only further built support for the right-wing movement."
-austral.307.a:0 "A fine man"
-austral.308.t:0 "Resignation of Fred Paterson"
-austral.308.d:0 "The 'People's Champion' Fred Paterson, after years of strong leadership, has decided to step down as Chairman of the ACTU citing family and health as the reason. While he may no longer be the leader of the ACTU, he will take over as vice-chairman for the new leader. The first choice to replace him is Elsie Farrelly, a renowned socialist and feminist who made several succesful strides to empower working class women. The other choice is the scholar and philosopher, John Anderson. He has pushed for many reforms to help our comrades seek higher education and pursue greater knowledge. Both are quite worthy of the position but only one can be chosen."
-austral.308.a:0 "Elsie Farrely will take his place"
-austral.308.b:0 "John Anderson is the appropriate choice"
-austral.309.t:0 "Death of John Curtin"
-austral.309.d.hog:0 "Having suffered from deteriorating health for a number of years, Prime Minister John Curtin today died of heart failure at the Lodge in Canberra. The longtime leader of the Labor party, Curtin was well-respected across the country but being Prime Minister led to a sharp decline in his health over the previous few years. His body was returned to his home city of Perth on a RAAF Dakota, escorted by a flight of nine fighter aircraft. After lying in state, he was buried at Karrakatta Cemetery in Perth, with his funeral route being lined by over 100,000 people with the service itself being attended by over 30,000."
-austral.309.d.nothog:0 "Having suffered from deteriorating health for a number of years, John Curtin today died of heart failure at his offices in Canberra. The longtime leader of the Labor party, Curtin was well-respected across the country. After lying in state, he was buried at Karrakatta Cemetery in his home city of Perth, with his funeral route being lined by over 100,000 people with the service itself being attended by over 30,000."
-austral.309.a:0 "A great Australasian passes"
-austral.310.t:0 "The New Leader of Labor"
-austral.310.d:0 "With the death of Curtin, the temporary head of the Labor party, Ben Chifley, faces an election to determine whether his leadership will be permanent, or whether it will fall to the popular up-and-comer, Peter Fraser. Most consider the chances of either succeeding in the tight race to be even."
-austral.310.a:0 "Chifley remains the Labor leader"
-austral.310.b:0 "Peter Fraser takes control of the party"
+austral.300.t:0 "조지 왕자의 추락사"
+austral.300.d:0 "최근 뉴질랜드로 향하던 경비행기의 추락으로 수 사람의 인명이 희생되었고 그 중에는 [Root.GetNameDef]의 총독 조지 왕자도 포함되어 있습니다. 국가는 이를 애도하고 젊은 왕자의 죽음에 분노하고 있으며 왕립 위원회는 현재 사고의 원인을 조사하고 있지만... 사실대로 말하면, 몇 주간의 수색에도 태평양에서는 조금의 잔해도 발견되지 않았습니다. 그 동안 왕자의 형인 글로스터 공작 헨리 왕자가 동생을 대신해 [Root.GetNameDef]에 도착했습니다. 슬프게도 헨리 왕자의 총독으로서의 첫 번째 활동은 그의 형제의 장례식에 참가하는 일이 될 것입니다."
+austral.300.a:0 "슬픈 손실이다"
+austral.301.t:0 "조셉 라이언의 사망"
+austral.301.d:0 "오늘 오스트랄라시아 하원은 조셉 A. 라이언을 잃은 것을 애도합니다. 그는 노동당을 떠나 국민당의 지도부에 올랐음에도 불구하고 모든 정치 진영에서 우호적으로 기억됩니다. 그의 유산은 고난과 투지로 얻은 것으로 그는 스탠리 브루스와 함께하며 경질의 위험에도 민주적 선거를 계속해서 주장했습니다. 그는 또한 최악의 불경기를 완화한 정책의 도입에 부분적으로 공이 있으며 국민당은 실패했지만 그는 많은 대중에게 최선의 임무를 해내던 사람으로 생각되어왔습니다."
+austral.301.a:0 "그가 그리울 것이다"
+austral.302.t:0 "프레드 패터슨이 저격당하다!"
+austral.302.d:0 "오스트랄라시아 노동조합 협의회가 첫 총회를 준비하는 가운데 정부는 내분과 정치적 술책의 온상이 되었습니다. 그 때문인지 생디칼리스트 지도자 프레드 패터슨이 오늘 이른 아침 캔버라의 사무실을 나가는 중에 저격당했습니다. 급히 병원으로 호송된 패터슨은 좋은 상태라고 발표되었고 빠른 회복이 예상되지만 습격자는 아직 잡히지 않았습니다. ACTU의 최고위층으로부터 진정하고 총회가 소집되면 질서있게 권력을 이행할 것을 호소하는 요청이 나왔습니다."
+austral.302.a:0 "끔찍하군"
+austral.303.t:0 "스탠리 브루스의 은퇴"
+austral.303.d.gov:0 "23년간의 정치 생활과 논란 끝에 스탠리 브루스 총리는 오스트랄라시아 연합당의 대표에서 물러나기로 결정했습니다. 이는 당에 엄청난 혼란을 가져왔고 어떤 이들은 그의 결정이 시기상조적이라 했으며 그의 후임자에 대한 즉각적인 논쟁이 시작되었습니다. "
+austral.303.d.notgov:0 "23년간의 정치 생활과 논란 끝에 스탠리 브루스는 오스트랄라시아 연합당의 대표에서 물러나기로 결정했습니다. 이는 당에 후임자를 찾으면서 엄청난 혼란을 가져왔지만 브루스의 지도력의 부재가 당을 현재의 상황으로 만들었다는 공감대가 형성된 것으로 보입니다. 그들은 이것을 통합당을 일신할 기회로 보고 있습니다."
+austral.303.a:0 "로버트 맨지스가 새로운 연합당의 대표로 나올 것이다"
+austral.303.b:0 "시드니 홀랜드가 당을 이끄는 첫 뉴질랜드 인이 될 것이다"
+austral.304.t:0 "연합당/국가당 연정의 해체"
+austral.304.d:0 "로버트 멘지스가 연합당의 대표로 당선된 것에 불만을 가진 얼 페이지는 멘지스의 청렴함에 대해 '오스트랄라시아 정부는 제가 언급한 것 외에도 용기와 충성심, 결단력의 세 필수 요소를 가진 지도자를 필요로 합니다'라는 발언으로 통렬한 공격을 가했습니다. 페이지가 정당간의 실질적인 합의 사항을 즉각적으로 깨면서 연합당과 국가당의 연정은 완전히 끝난 것으로 보입니다."
+austral.304.a:0 "난장판이군"
+austral.305.t:0 "페이지가 국가당 대표에서 실각하다"
+austral.305.d:0 "연합당과의 연정이 종결되며 국가당 내의 분쟁은 절정에 이르렀고 얼 페이지는 당에서 만장일치로 당 대표에서 실각했으며 그의 후임은 아서 패든이 되었습니다."
+austral.305.a:0 "흥미롭군"
+austral.306.t:0 "J.B. 마일스의 은퇴"
+austral.306.d:0 "악화되는 건강과 오스트랄라시아 노동조합 협의회에서 흔들리는 지도력으로 J.B. 마일스는 마침내 최대주의자의 지도자로서의 위치에서 은퇴하기로 약속했습니다. 은퇴 전에 마일스는 사실상 의장으로서 무력했으며 그의 후계자로 지목되어온 랜스 샤키는 천천히 마일스의 지도력을 잠식해왔습니다. 지금까지 알려져 온 것이 암시하는 대로는 마일스의 은퇴는 그의 의중과는 동떨어진 일이지만 이 문제에 관한 의문은 거의 없습니다. 이 일에도 불구하고 마일스는 최대주의자들에 대한 헌신을 재확언했으며 계속해서 그들을 지지할 것입니다."
+austral.306.a:0 "너무 나쁘군"
+austral.307.t:0 "데이비드 머레이 앤더슨의 죽음"
+austral.307.d:0 "오늘 시드니의 모든 깃발는 데이비드 머레이 앤더슨 경의 갑작스런 사망 이후 조기로 게양되어 있습니다. 현 뉴사우스웨일스 주 총독인 앤더슨 경은 동인도의 영국 식민지에서의 성공적인 철수로 영국 태평양 함대의 대부분과 수 천명의 생명을 구한 일로 유명합니다. 앤더슨 경은 한동안 와병중으로 필립 스트리트 경이 대중에게의 출연을 메꿔왔지만 '오스트랄라시아에서 유일하게 올바른 생각을 하는 사람들'이라며 동인도를 되찾기 위한 자신의 계획의 실행을 가능케한 오스트랄라시아 수비대를 지지하는 목소리를 내기도 했습니다. 그의 죽음으로 그 우익적 운동은 더한 지지를 얻게 되었습니다."
+austral.307.a:0 "좋은 사람이었다."
+austral.308.t:0 "프레드 패터슨의 은퇴"
+austral.308.d:0 "'인민의 영웅' 프레드 패터슨이 다년간의 강한 지도력을 발휘한 끝에 가족과 건강을 이유로 ACTU의 의장에서 퇴임하기로 결정했습니다. 그가 더이상 ACTU의 지도자가 아니게되지만 새로운 지도자를 위해 부의장직을 인계받을 것입니다. 그를 대신할 첫번째 선택지는 엘시 패럴리로 명망있는 사회주의자이며 노동 계급 여성에게 권력을 싣는데 몇가지 성공적인 진보를 이끌어낸 페미니스트입니다. 또다른 선택지는 학자이자 철학자인 존 앤더슨입니다. 그는 우리의 동지들이 고등 교육을 받고 더 많은 지식을 추구하는 것을 돕는 많은 개혁을 추진했습니다. 양 쪽 다 그 직위에 오를 자격이 있지만 한 명만이 선택되어야 합니다."
+austral.308.a:0 "엘시 패럴리가 그의 자리를 인수할 것이다"
+austral.308.b:0 "존 앤더슨이 적절한 선택이다"
+austral.309.t:0 "존 커틴의 사망"
+austral.309.d.hog:0 "건강 악화로 몇 년 동안 고통받아온 존 커틴 총리가 오늘 캔버라의 관저에서 심부전으로 사망했습니다. 노동당의 오랜 지도자였던 커틴은 전국에서 지지받았지만 총리가 되면서 지난 몇 년간 그의 건강은 급격하게 하강했습니다. 그의 유해는 RAAF의 수송기 Dakota로 전투기 9대의 호위와 함께 그의 고향 퍼스로 반환되었습니다. 그는 지역에 도착해 퍼스의 카라카타 공동묘지에 묻혔으며 그의 장례식 행렬에는 10만 명의 사람들이 뒤를 따랐으며 행사에는 3만 명이 참여했습니다."
+austral.309.d.nothog:0 "건강 악화로 몇 년 동안 고통받아온 존 커틴이 오늘 캔버라의 사무실에서 심부전으로 사망했습니다. 노동당의 오랜 지도자였던 커틴은 전국에서 지지받아 왔습니다. 그는 지역에 도착해 퍼스의 카라카타 공동묘지에 묻혔으며 그의 장례식 행렬에는 10만 명의 사람들이 뒤를 따랐으며 행사에는 3만 명이 참여했습니다."
+austral.309.a:0 "위대한 오스트랄라시아인이 떠났다"
+austral.310.t:0 "노동당의 새로운 대표"
+austral.310.d:0 "커틴의 사망으로 노동당의 임시 대표였던 벤 치플리는 그의 지도가 영구적인 것일지 인기있는 유망주 벤 프레이저에게 넘길지를 결정할 선거에 직면했습니다. 대부분은 아슬아슬한 경쟁에서 양쪽이 이길 확률이 동일하다고 보고 있습니다. "
+austral.310.a:0 "치플리가 노동당 대표직을 유지한다"
+austral.310.b:0 "피터 프레이저가 당을 장악한다"
 austral.350.t:0 "[From.GetNameDefCap] Claims New Guinea"
 austral.350.d:0 "The [From.GetAdjective] government, pursuing a revanchist policy which it calls the Anderson Doctrine, has laid a claim on the northern part of New Guinea and the archipelagos immediately to its east, citing [Root.GetNameDef]'s control over the region to be contrary to its national interest. Whether they intend to pursue these claims remains to be seen."
 austral.350.a:0 "Outrageous!"
