--- a/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
@@ -23,30 +23,30 @@ BUL_national_populist_party:0 "즈베다"
 BUL_national_populist_party_long:0 "즈베다"
 
 ### Ideas ###
-BUL_retain_agrarianism_idea:0 "Retain Agrarianism"
-BUL_retain_agrarianism_idea_desc:0 "We have decided to remember our roots and ensure that Bulgaria remains an agrarian nation. This is seen by many, including our peasants and members of the Bulgarian Agrarian National Union, as the safer and correct choice. We can now focus on furthering Bulgaria's output of crops and other agricultural goods to the market."
+BUL_retain_agrarianism_idea:0 "토지 균분론 유지"
+BUL_retain_agrarianism_idea_desc:0 "우리는 우리의 뿌리를 기억하며 불가리아가 농촌 국가로 남아있게 하도록 결정했습니다. 이것은 농부들과 불가리아 농민 연합의 회원들을 포함하여 많은 사람들에게 보다 안전하고 올바른 선택으로 보여질 것입니다. 우리는 이제 불가리아의 농작물과 다른 농산물 생산량을 시장에 더 많이 공급하는데 집중할 수 있습니다."
 BUL_ailing_economy_idea:0 "병든 경제"
 BUL_ailing_economy_idea_desc:0 "마닐로프 총리가 독일과의 관계를 단절하기로 한 이후 동시에 우리의 모든 이웃들과의 냉각된 관계로 우리는 우리의 경제가 파산에 이르지 않게하기 위해 우리 스스로와 우리와 거래하고자 하는 거의 얼마 없는 국가들에게 의존하게 될 수 밖에 없었습니다. 게다가, 우리의 위험한 경제적 상태는 가장 모험심 넘치는 투자자조차 쫓아내는 우리의 보호무역 정책에 도움을 받지 못하고 있습니다..."
-BUL_increased_wheat_exports_idea:0 "Increased Wheat Exports"
-BUL_increased_wheat_exports_idea_desc:0 "By exporting more wheat into the world market, we can better stimulate economic activity in both Bulgaria and the rest of the world while also reaping lucrative profits at the same time."
-BUL_increased_wheat_exports_idea2:0 "Increased Wheat Exports"
-BUL_increased_wheat_exports_idea2_desc:0 "By exporting more wheat into the world market, we can better stimulate economic activity in both Bulgaria and the rest of the world while also reaping lucrative profits at the same time."
-BUL_black_monday_idea:0 "Black Monday"
-BUL_black_monday_idea_desc:0 "Following the crash of the Berlin Stock Exchange, it was only a matter of time before the shockwaves from the economic downturn had reached Bulgaria. Our economy has been hit very hard, with unemployment rates skyrocketing, unrest growing throughout the populace, and the price of military pensions weighing down on us heavily. We must turn our gaze to ending this economic crisis once and for all."
-BUL_black_monday_idea2:0 "Black Monday"
-BUL_black_monday_idea2_desc:0 "Following the crash of the Berlin Stock Exchange, it was only a matter of time before the shockwaves from the economic downturn had reached Bulgaria. Our economy has been hit very hard, with unemployment rates skyrocketing, unrest growing throughout the populace, and the price of military pensions weighing down on us heavily. We must turn our gaze to ending this economic crisis once and for all."
-BUL_black_monday_idea3:0 "Black Monday"
-BUL_black_monday_idea3_desc:0 "Following the crash of the Berlin Stock Exchange, it was only a matter of time before the shockwaves from the economic downturn had reached Bulgaria. Our economy has been hit very hard, with unemployment rates skyrocketing, unrest growing throughout the populace, and the price of military pensions weighing down on us heavily. We must turn our gaze to ending this economic crisis once and for all."
-BUL_black_monday_idea4:0 "Black Monday"
-BUL_black_monday_idea4_desc:0 "Following the crash of the Berlin Stock Exchange, it was only a matter of time before the shockwaves from the economic downturn had reached Bulgaria. Our economy has been hit very hard, with unemployment rates skyrocketing, unrest growing throughout the populace, and the price of military pensions weighing down on us heavily. We must turn our gaze to ending this economic crisis once and for all."
-BUL_empowering_the_bank_idea:0 "Empowering the Bulgarian National Bank"
-BUL_empowering_the_bank_idea_desc:0 "In order to revalue and improve the stability of our currency, we must ensure that the BUlgarian National Bank is properly funded and that regulations are put in place so that we may bring about an economically strong and financially sound Bulgaria."
-BUL_adopt_industrialisation_idea:0 "Adopt Industrialisation"
-BUL_adopt_industrialisation_idea_desc:0 "Seen by many as risky, we've decided to abandon Bulgaria's status as an agricultural nation and have begun to take steps to turn the nation into one that is primarily industrial. This has, however, worried and even angered many members of the Bulgarian Agrarian National Union, who see our move towards industrialisation as one that will only hurt the farmers."
+BUL_increased_wheat_exports_idea:0 "밀 수출 증가"
+BUL_increased_wheat_exports_idea_desc:0 "세계 시장에 더 많은 밀을 수출함으로써, 우리는 불가리아와 세계의 경제 활동을 자극하면서 동시에 수익성있는 이익을 거둘 수 있게 되었습니다."
+BUL_increased_wheat_exports_idea2:0 "밀 수출 증가"
+BUL_increased_wheat_exports_idea2_desc:0 "세계 시장에 더 많은 밀을 수출함으로써, 우리는 불가리아와 세계의 경제 활동을 자극하면서 동시에 수익성있는 이익을 거둘 수 있게 되었습니다."
+BUL_black_monday_idea:0 "검은 월요일"
+BUL_black_monday_idea_desc:0 "베를린 증권 거래소의 붕괴 이후, 경기 침체로 인한 충격이 불가리아에 도달하는 것은 시간 문제였습니다. 우리 경제는 실업률이 급증하고, 국민 전체에 불안이 고조되며, 군비 지출이 우리에게 큰 부담으로 작용하여 매우 어려움을 겪었습니다. 우리는 이 경제적 위기를 단호히 끝내기 위해 시선을 돌려야 합니다."
+BUL_black_monday_idea2:0 "검은 월요일"
+BUL_black_monday_idea2_desc:0 "베를린 증권 거래소의 붕괴 이후, 경기 침체로 인한 충격이 불가리아에 도달하는 것은 시간 문제였습니다. 우리 경제는 실업률이 급증하고, 국민 전체에 불안이 고조되며, 군비 지출이 우리에게 큰 부담으로 작용하여 매우 어려움을 겪었습니다. 우리는 이 경제적 위기를 단호히 끝내기 위해 시선을 돌려야 합니다."
+BUL_black_monday_idea3:0 "검은 월요일"
+BUL_black_monday_idea3_desc:0 "베를린 증권 거래소의 붕괴 이후, 경기 침체로 인한 충격이 불가리아에 도달하는 것은 시간 문제였습니다. 우리 경제는 실업률이 급증하고, 국민 전체에 불안이 고조되며, 군비 지출이 우리에게 큰 부담으로 작용하여 매우 어려움을 겪었습니다. 우리는 이 경제적 위기를 단호히 끝내기 위해 시선을 돌려야 합니다."
+BUL_black_monday_idea4:0 "검은 월요일"
+BUL_black_monday_idea4_desc:0 "베를린 증권 거래소의 붕괴 이후, 경기 침체로 인한 충격이 불가리아에 도달하는 것은 시간 문제였습니다. 우리 경제는 실업률이 급증하고, 국민 전체에 불안이 고조되며, 군비 지출이 우리에게 큰 부담으로 작용하여 매우 어려움을 겪었습니다. 우리는 이 경제적 위기를 단호히 끝내기 위해 시선을 돌려야 합니다."
+BUL_empowering_the_bank_idea:0 "불가리아 국립 은행 역량 강화"
+BUL_empowering_the_bank_idea_desc:0 "통화의 안정성을 재평가하고 개선하기 위해서, 우리는 불가리아 국립 은행에 적절히 자금을 지원하고, 경제적으로 튼튼한 불가리아를 만들 수 있도록 규제를 시행하도록 해야 합니다."
+BUL_adopt_industrialisation_idea:0 "산업화 채택"
+BUL_adopt_industrialisation_idea_desc:0 "많은 사람들이 위험하다고 여겼기 때문에, 우리는 농업 국가로서의 불가리아의 지위를 포기하기로 결정하고 주로 산업적인 국가로 만들기 위한 조치를 취하기 시작했습니다. 그러나 이것은 우리의 산업화를 향한 움직임이 농부들에게만 해를 입힐 것이라고 보는 불가리아 농민 연합의 많은 회원들을 걱정시키고 심지어 화나게 했습니다."
 BUL_military_pensions_idea:0 "군인 연금"
 BUL_military_pensions_idea_desc:0 "세계 대전 동안 불가리아는 가능한 모든 병력을 보냈고 인구의 상당한 비율이 징집되어 전선으로 배치되었습니다. 이는 전쟁 중에는 상당히 요긴한 것이었지만 연금을 받아야할 병사의 수가 운용할 수 있는 기금을 웃돌면서 세계 대전이 결판난 이후로는 우리들을 괴롭혀왔습니다."
-BUL_slashed_military_pensions_idea:0 "Slashed Military Pensions"
-BUL_slashed_military_pensions_idea_desc:0 "We have made the controversial decision of entirely cutting the funding of military pensions. This has not endeared us to many veterans, or even the military themselves, who see us as taking away what had rightfully belonged to them. And while this measure is an extreme one, it is required if we are to ever prosper economically."
+BUL_slashed_military_pensions_idea:0 "군인 연금 삭감"
+BUL_slashed_military_pensions_idea_desc:0 "우리는 군인 연금을 완전히 삭감한다는 논란의 여지가 있는 결정을 내렸습니다. 이것은 많은 퇴역 군인들, 심지어 군인들에게 사랑받지 못했습니다. 그들은 우리가 그들에게 당연히 속해있던 것을 빼앗는 것으로 보고 있습니다. 이 조치는 극단적인 조치이지만, 우리가 경제적으로 번영하려면 꼭 필요할 것입니다."
 BUL_reorganised_military_pensions_idea:0 "Reorganised Military Pensions"
 BUL_reorganised_military_pensions_idea_desc:0 "While it has been a long and hard road, we have managed to properly reorganise the military pension system which will allow us to better and more efficiently divert funding towards our veterans."
 BUL_coal_extraction_idea:0 "Coal Extraction"
