--- a/Kaiserreich Korean Translation/localisation/KR_Serbia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Serbia_l_english.yml
@@ -325,11 +325,11 @@ serbia.14.t:0 "Milutin Nedić Has Died"
 serbia.14.d:0 "The hero of the Balkan wars and the Weltkrieg has died today. A day of national mourning has been declared."
 serbia.14.a:0 "We will miss him."
 
-serbia.15.t:0 "Status of the Orthodox Church"
+serbia.15.t:0 "동방 정교회의 지위"
 serbia.15.d:0 "The Orthodox Church, under the leadership of the vocal Patriarch Varnava Rosić, is demanding a reclarification of its legal status in the Serbian state. He wants a constitutional amendment passed on the issue of the national religion."
-serbia.15.a:0 "Orthodoxy is our state religion."
-serbia.15.b:0 "We are modern and secular!"
-serbia.15.c:0 "The Orthodox Church must have a role in our government."
+serbia.15.a:0 "정교회는 국교다."
+serbia.15.b:0 "우리는 현대적이고 세속적이다!"
+serbia.15.c:0 "정교회는 우리 정부에 속해야 한다."
 
 serbia.16.t:0 "Serbia Asks for Montenegro"
 serbia.16.d:0 "The resurgent Serbian state today pressured us to give up Montenegro. The largely Serbian population of that province has for some time voiced their wish to join Serbia. In return for the province, Serbia has told us they will not demand any further Illyrian land."
