--- a/Kaiserreich Korean Translation/localisation/KR_Serbia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Serbia_l_english.yml
@@ -321,9 +321,9 @@ serbia.13.t:0 "Petar Bojović Has Died"
 serbia.13.d:0 "The former Regent of our nation has died today and a day of mourning has been declared."
 serbia.13.a:0 "We will miss him."
 
-serbia.14.t:0 "Milutin Nedić Has Died"
-serbia.14.d:0 "The hero of the Balkan wars and the Weltkrieg has died today. A day of national mourning has been declared."
-serbia.14.a:0 "We will miss him."
+serbia.14.t:0 "믈루친 네딕 서거"
+serbia.14.d:0 "발칸전쟁과 세계대전의 영웅이 오늘 서거하였으며, 국장의 날이 선포되었습니다."
+serbia.14.a:0 "그를 잊지 않을 것이다."
 
 serbia.15.t:0 "동방 정교회의 지위"
 serbia.15.d:0 "The Orthodox Church, under the leadership of the vocal Patriarch Varnava Rosić, is demanding a reclarification of its legal status in the Serbian state. He wants a constitutional amendment passed on the issue of the national religion."
