--- a/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
@@ -65,7 +65,7 @@ sec_cannot_be_replaced:0 "내무부 장관 재임명 불가"
 ministers_cannot_be_replaced:0 "장관 재임명 불가"
 
 ### Factions ###
-Mittelmacht:0 "제국 협정"
+Mittelmacht:0 "제국 조약"
 Entente:0 "협상국"
 Belgrade_Pact:0 "베오그라드 조약 기구"
 Third_International:0 "제3인터내셔널"
