--- a/Kaiserreich Korean Translation/localisation/KR_Two_Sicilies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Two_Sicilies_l_english.yml
@@ -4,35 +4,35 @@ l_english:
 SIC_BM_3:0 "검은 월요일이 메초조르노를 강타하다"
 SIC_BM_2:0 "최악의 사태는 끝났다"
 SIC_BM_1:0 "긴축 조치"
-SIC_bacc_on_tracc:0 "Thriving Economy"
+SIC_bacc_on_tracc:0 "번영하는 경제"
 SIC_modernized_army:0 "Messe's Reforms"
 SIC_modernized_army2:0 "The Army of Trinacria"
 SIC_total_war:0 "Sicily's Last Stand"
 SIC_pretty_much_feudalism:0 "The Land Issue"
-SIC_less_feudal_stuff:0 "First Steps of Land Reform"
-SIC_land_reform_done:0 "The Sicilian Land Reform"
+SIC_less_feudal_stuff:0 "육군 개혁의 첫걸음"
+SIC_land_reform_done:0 "시칠리아 육군 개혁"
 SIC_developed:0 "Ongoing Industrialisation Program"
 SIC_make_moar_danks:0 "ANFA Subsidies"
-SIC_sd_unions:0 "Christian Trade Unions"
-SIC_sd_welfare:0 "Welfare State"
+SIC_sd_unions:0 "기독교 노동조합"
+SIC_sd_welfare:0 "복지국가"
 SIC_sl_liberties_assured:0 "Reassured Civil Liberties"
-SIC_sl_free_market:0 "Public Work Projects"
-SIC_sc_breadbaskett:0 "Breadbasket of Italy"
-SIC_sc_preserved_values:0 "Sicilian Values"
+SIC_sl_free_market:0 "공공 노동 계획"
+SIC_sc_breadbaskett:0 "이탈리아의 곡창지대"
+SIC_sc_preserved_values:0 "시칠리아 가치"
 SIC_kingpath:0 "All Behind the King"
 SIC_ban_italian:0 "Autonomies Protected"
-SIC_italian_confederation:0 "Member of the Italian Confederation"
-SIC_imperial_splendour:0 "Empire Reborn"
-SIC_planning_bonus_yuge:0 "Planning the Liberation"
-SIC_shipyard_profits:0 "Profits from Shipyards"
-SIC_merchant_marine_idea:0 "Merchant Marine"
-SIC_secret_polices:0 "Secret Police"
-SIC_corportism_idea:0 "Corporatism"
-SIC_motorization_offensive_idea:0 "Motorised Offensive"
-SIC_sicilian_auto_industry_idea:0 "Sicilian Automotive Industry"
-SIC_red_guard_terrorists:0 "Syndicalist Terrorists"
-SIC_state_catholic_unions:0 "National Catholic Unions"
-SIC_farm_upgrades:0 "Modern Farming"
+SIC_italian_confederation:0 "이탈리아 연방의 구성국"
+SIC_imperial_splendour:0 "제국 부활"
+SIC_planning_bonus_yuge:0 "해방 계획"
+SIC_shipyard_profits:0 "조선소 수익"
+SIC_merchant_marine_idea:0 "상선 해병대"
+SIC_secret_polices:0 "비밀경찰"
+SIC_corportism_idea:0 "협동조합주의"
+SIC_motorization_offensive_idea:0 "차량화 공세"
+SIC_sicilian_auto_industry_idea:0 "시칠리아 자동차 산업"
+SIC_red_guard_terrorists:0 "생디칼리스트 테러리스트"
+SIC_state_catholic_unions:0 "국립 카톨릭 협회"
+SIC_farm_upgrades:0 "현대 농업"
 SIC_BM_3_desc:0 "The awful ripples of the economic collapse of Germany's continental system have shaken our economy"
 SIC_BM_2_desc:0 "The awful ripples of the economic collapse of Germany's continental system have subsided, but are still intense enough to cause meaningful budgetary issues "
 SIC_BM_1_desc:0 "The awful ripples of the economic collapse of Germany's continental system can by now barely be even noticed, thanks to wise and decisive government action"
@@ -67,7 +67,7 @@ SIC_state_catholic_unions_desc:0 "Workers together, meeting and working together
 SIC_farm_upgrades_desc:0 "No more can the ploughshare and wheelbarrow truly be deemed the tools of the farmers; tractors and other machines of the modern age are slowly but surely taking their place"
 
 ### Country Flags ###
-SIC_locked_and_loaded:0 "Ready to Strike"
+SIC_locked_and_loaded:0 "파업 준비"
 SIC_elections:0 "1937년 의회 선거가 일어났다."
 SIC_elections_SD:0 "기독민주당의 선거 승리"
 SIC_elections_SL:0 "대중민주당의 선거 승리"
@@ -143,23 +143,23 @@ SIC_armed_forces:0 "왕립군"
 SIC_armed_forces_desc:0 "이탈리아를 분열시킨 파괴적인 내전 이후, 남쪽에 있는 이탈리아 연방군의 잔재들은 양시칠리아 왕립군으로 재편성되었습니다. 그러나 이 조직 개편은 아직 완료되지 않았으므로, 해당 방향으로 조치를 취해야 합니다."
 SIC_he_atacc:0 "Take the Fight to Them!"
 SIC_he_atacc_desc:0 "The answer to the Syndicalist question is simple: Look for an opening to attack! Liberate all of Italy from these treacherous french snakes before other envious powers do so!"
-SIC_sicilian_auto_industry:0 "Sicilian Automotive Industry"
+SIC_sicilian_auto_industry:0 "시칠리아 자동차 산업"
 SIC_sicilian_auto_industry_desc:0 "The key to modern warfare is to move faster than our enemies to outmanoeuvre them. Thankfully, many automotive leaders were pushed off of Syndicalist lands and can lend us a hand in reclaiming occupied territory"
-SIC_motorization_offensive:0 "Mechanised Offensive"
+SIC_motorization_offensive:0 "차량화 공세"
 SIC_motorization_offensive_desc:0 "More than just using trucks, we will use special infantry transport vehicles to gain the upper hand against the Red Tide."
 SIC_mobilize_the_realm:0 "Mobilise the Realm"
 SIC_mobilize_the_realm_desc:0 "Every man must do his duty to save Italy's soul from Syndicalism and French slavery. Are YOU doing your part?"
-SIC_planning_grand_offensive:0 "Planning the Grand Offensive"
+SIC_planning_grand_offensive:0 "대공세 계획"
 SIC_planning_grand_offensive_desc:0 "Invading the North will be no easy task; Terrain, climate and the logistics of French reinforcements all must be taken into account if we are to triumph in this dangerous battle"
 SIC_armored_thrusts:0 "Armoured Thrusts"
 SIC_armored_thrusts_desc:0 "The Syndicalists likely have battle lines waiting for us... to smash through them with the power of Italian engineering!"
-SIC_strike_now:0 "Strike Now!"
+SIC_strike_now:0 "파업을 시작하라!"
 SIC_strike_now_desc:0 "The time has come! The Syndicalists are busy elsewhere, and the opening we were waiting for has presented itself. Italy will be reclaimed!"
 SIC_apenini:0 "Arditi degli Appennini"
 SIC_apenini_desc:0 "The mountainous region in the border with the Syndicalist controlled areas will be a crucial battleground. As will be the Alps, once we are forced to face the French menace. Our elite troops, heirs of the surviving Alpini of the Italian Federal Army, will gallantly serve again"
 SIC_fusilero:0 "Sicilian Marine Corps"
 SIC_fusilero_desc:0 "Our navy can ensure superiority in the seas; with that advantage, we will strike at the coastlines of the Syndicalists and reclaim Italy for the Italians"
-SIC_army_reform:0 "Begin Army Reform"
+SIC_army_reform:0 "육군 개혁 시작"
 SIC_army_reform_desc:0 "Our army is still in many ways a mish-mash of militias, old Federal Italian divisions, conscripts and volunteer foreigners. Organising it into an effective fighting force will be a complicated task"
 SIC_army_innovation:0 "Messe's Reform Plan"
 SIC_army_innovation_desc:0 "A small clique of generals, led by Giovanni Messe, a veteran of our War of Resistance, is planning audacious reforms to our military structure and planning. Perhaps allowing them to have their voice heard is in our best interest"
@@ -490,7 +490,7 @@ sic.33.t:0 "협상국의 거절"
 sic.33.d:0 "캐나다는 우리의 협상국 가입 제안을 거절하였습니다."
 sic.33.a:0 "빌어먹을 캐나다놈들"
 
-sic.34.t:0 양시칠리아가 제국 협정 가입을 요청합니다"
+sic.34.t:0 "양시칠리아가 제국 협정 가입을 요청합니다"
 sic.34.d:0 "양시칠리아 왕국의 특사가 오늘 베를린에 도착하여 그들의 왕국이 제국 협정에 가입할 가능성에 대해 논의했습니다. 우리는 그들을 들여보내주어야 할까요, 아니면 필요없다 해야 할까요?"
 sic.34.a:0 "그들을 들여보내자"
 sic.34.b:0 "우리는 그들이 필요없다"
@@ -520,7 +520,7 @@ sic.40.t:0 "이탈리아 제국"
 sic.40.d:0 "오늘, 이탈리아 전 지역은 이탈리아 제국으로 선언되었습니다. Ferdinand the Pius와 그의 아내 Maria Ludwiga Theresia는 로마에서 호화로운 즉위식을 통해 황제와 황후의 자리에 올랐습니다. 오늘 이탈리아는 통일 국가의 꿈을 이룬 것을 축하하고 있습니다"
 sic.40.a:0 "이탈리아 만세!"
 
-sic.41.t:0 "De-syndicalization"
+sic.41.t:0 "탈 생디칼리즘화"
 sic.41.d:0 "With the north under our control, we must begin the process of de-syndicalisation. Not just of the economy but of society as a whole. The question on everyone's lips is whether we will be harsh in our reforms, or prioritize reconciliation."
 sic.41.a:0 "They should learn their lessons"
 sic.41.b:0 "We should focus on reconciliation"
@@ -529,16 +529,16 @@ sic.42.t:0 "군주주의 강화"
 sic.42.d:0 "북부 이탈리아는 2개의 공화국에 의해 통치되어 공화주의가 강합니다. 하지만 시간이 지나면서, 점점 더 많은 사람들이 군주제를 지지하고 있습니다. 우리가 공화주의를 100퍼센트 없앨 수는 없을 것이지만, 우리는 북부에서 황실이 점점 더 지지를 받고 있다는 것을 알 수 있습니다."
 sic.42.a:0 "국왕 폐하 만세!"
 
-sic.43.t:0 "Integrating Generals"
+sic.43.t:0 "장군 편입"
 sic.43.d:0 "Today, several of the generals that previously fought for the various imposter governments have requested to fight for the Empire. Some feel that they should not fight for us, seeing as they fought against us, but others think that allowing them to fight for our shared country would make for an excellent statement of national unity."
-sic.43.a:0 "They should fight for Italy!"
-sic.43.b:0 "We don't need people who fought against us"
+sic.43.a:0 "장군들은 이탈리아를 위해 싸워야한다!"
+sic.43.b:0 "우리에게 총을 겨눈자들은 필요없다"
 
-sic.44.t:0 "Women's role in the empire"
+sic.44.t:0 "제국내 여성의 역할"
 sic.44.d:0 "In the Socialist Republic of Italy, the traditional roles of women were destroyed. However, now that we are in charge the question of Women's role in the empire has arisen. Some want us to double down on the traditional role for ladies to protect the family, while others think giving them the right to vote, but not run for office, is good enough. Finally, a smaller number, principally from the Social Democratic Partito Cristiano Democratico suggest full suffrage including both the right to vote and the right to run for office."
-sic.44.a:0 "Re-enforce traditional Values"
-sic.44.b:0 "Let women have the right to vote"
-sic.44.c:0 "Let them vote and run for office"
+sic.44.a:0 "전통의 가치를 강화 시킨다"
+sic.44.b:0 "여성들에게 투표권을 줘라"
+sic.44.c:0 "여성들에게 투표권을 주고 일을 하게 해줘라"
 
 sic.45.t:0 "Dealing with Christian Socialism"
 sic.45.d:0 "In the Socialist Republic of Italy christian socialism was rather popular in the north. As we focus on de-syndicalising society, many politicians want to turn away from liberal philosophies, with many more conservative and far-right members declaring them to be anti-christian. However, some among the Partito Cristiano Democratico think that, by focusing on a moderate christian democracy, we can turn people away from the more radical nature of christian socialism. This policy is criticized for being just a ploy to increase their power in the north."
