--- a/Kaiserreich Korean Translation/localisation/KR_Indochinese_Union_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Indochinese_Union_l_english.yml
@@ -92,11 +92,11 @@ INC_Youth_Shock_Brigade_idea_b_desc:0 "Many young Indochinese, including, and es
 INC_Youth_Shock_Brigade_idea_x:0 "여성 군대"
 INC_Youth_Shock_Brigade_idea_x_desc:0 "Many young Indochinese, including, and especially, women, serve in "Youth Shock Brigade" which perform a variety of logistics related tasks, including the transportation of wounded soldiers. This has greatly decreased preventable death within Indochina's armed forces and wounded soldiers are more quickly able to return to active duty. Now we startd to formally recruit female combatant from the experienced Youth Shock Brigade memebers and local militias."
 INC_Tunnel_idea_1:0 "터널 네트워크"
-INC_Tunnel_idea_1_desc:0 "Indochina has constucted an elaborate network of tunnels throughout much of the nation's areas of strategic importance. The tunnels serve a variety of military purposes and are extremely difficult for hostile forces to detect."
+INC_Tunnel_idea_1_desc:0 "인도차이나는 국내의 전략적 중요 거점들을 연결하는 매우 공들여진 터널들을 건설했습니다. 이것은 우리들의 전술에 다양성을 더해줄 것이며, 또한 적들이 이것을 찾는 것은 쉽지 않을 것입니다."
 INC_Tunnel_idea_2:0 "호치민 터널"
-INC_Tunnel_idea_2_desc:0 "The Ho Chi Minh trail is an elaborate network of supply routes cutting through Indochina's forested highlands. Even the most remote area of Indochina is now easily accessible for its armed forces."
-INC_Tiger_and_Elephant_idea:0 "Tiger and Elephant"
-INC_Tiger_and_Elephant_idea_desc:0 "Indochinese army units are drilled heavily in agility even in the harshest of terrain. For if a tiger stands his ground against an elephant, only deatha waits him, but with mobility, he may slay his larger foe."
+INC_Tunnel_idea_2_desc:0 "호치민 루트는 인도차이나의 숲으로 뒤덮힌 험지를 통과하여 보급품을 나르기 위해 만들어진 수준 높은 연결로입니다. 그 어떤 곳일지라도 인도차이나 군은 쉽게 이동할 수 있습니다."
+INC_Tiger_and_Elephant_idea:0 "호랑이와 코끼리"
+INC_Tiger_and_Elephant_idea_desc:0 "인도차이나 군은 험지에서도 유연성을 발휘할 수 있도록 혹독한 훈련을 받았습니다. 그 결과 호랑이는 크지만 둔한 코끼리를 날렵하게 상대하여 죽일 수 있게 됐습니다."
 INC_People's_Air_Defence_idea:0 "인민 항공 방위대"
 INC_People's_Air_Defence_idea_desc:0 "Indochina has created a robust network of air defence emplacements and prioritised the construction of new anti-air ordnance. The skies of Indochina are becoming increasingly secure."
 INC_Guerilla_in_the_Air_idea:0 "Guerrilla in the Air"
@@ -168,11 +168,11 @@ INC_Purge_Nguyen_Thi_Nam:0 "§R장관 Nguyen Thi Nam은 더 이상 사용할 수
 INC_Army_Reform_Plan:0 "우리는 군제개혁을 위한 계획을 가지고있다.."
 INC_national_assembly_tooltip:0 "국민의회가 소집되어 다수파를 창출하였다."
 INC_enable_popularity_system_tooltip:0 "§R이것은 연정을 끝내고 정당정치를 활성화시킬 것이다.§!\n"
-INC_Women_Liberation:0 "§RBreak down the gender division in the Indochinese society.§!\n"
-INC_can_core_Cambodia_tooltip:0 "§RCambodian citizens have developed an Indochinese identity.§!\n"
-INC_can_core_Laos_tooltip:0 "§RLaotian citizens have developed an Indochinese identity.§!\n"
-INC_help_core_Cambodia_tooltip:0 "§GThis will help develop an Indochinese identity among Cambodian citizens.§!\n"
-INC_help_core_Laos_tooltip:0 "§GThis will help develop an Indochinese identity among Laotian citizens.§!\n"
+INC_Women_Liberation:0 "§R인도차이나에서 성 역활 구분을 없애자!§!\n"
+INC_can_core_Cambodia_tooltip:0 "§R캄보디아인들에게서 인도차이나인으로의 정체성이 자라나고 있다. §!\n"
+INC_can_core_Laos_tooltip:0 "§R라오스인들에게서 인도차이나인으로의 정체성이 자라나고 있다.§!\n"
+INC_help_core_Cambodia_tooltip:0 "§G이것은 캄보디아인들이 자신들을 인도차이나인으로 자각할 수 있도록 도움을 줄 것이다.§!\n"
+INC_help_core_Laos_tooltip:0 "§G이것은 라오스인들이 자신들을 인도차이나인으로 자각할 수 있도록 도움을 줄 것이다.§!\n"
 INC_Laos_revolutionary_tooltip:0 "§YMinister SouphanouVon is available\nMinister Phomvihanh_Kaysonis available§!"
 INC_Cambodian_revolutionary_tooltip:0 "§YMinister Tou Samouth is available\nMinister Phomvihanh_Kaysonis available§!"
 INC_help_core_both_tooltip:0 "§GThis will help develop an Indochinese identity among both our Laotian and Cambodian citizens.§!\n"
@@ -248,32 +248,32 @@ viet.9.d.a:0 "Some rebels declared a so-called 'anti-syndicalist national salvat
 viet.9.d.b:0 "Some rebels declared a so-called 'anti-syndicalist national salvation revolution' in Saigon. They attacked factories and fighting began between rebels and local militias. Tan Viet party claimed that nationalists have betrayed the revolution and urged an immediate purge of nationalists, but VNQDD members claimed their innocence. The intelligence director delivered a secret report showing that the counter-revolutionary rebellion is organised by VNQDD members. Now, Comrade Pham Van Dong is asking: 'Comrade, there are two chairs here, one for nationalists and one for internationalists. On which do you wish to sit?'"
 viet.9.a:0 "인터네셔널주의자"
 viet.9.b:0 "미안, 민족주의자들을 택한다."
-viet.9.c:0 "I would like to sit on both."
+viet.9.c:0 "둘 다 의석에 앉히는 게 좋은 거 같은데"
 
 viet.10.t:0 "인도차이나 반란이 성공하다"
-viet.10.d:0 "The peoples of Indochina have finally thrown of the yoke of colonial exploitation! This is a great day for all the socialist nations of the world and a major defeat for the German Imperialists! Our military observers in Indochina have studied the guerrilla tactics adopted by the revolutionaries, but their usefulness remain to be seen."
+viet.10.d:0 "인도차이나인들은 마침내 식민 착취의 멍에를 떨춰냈습니다! 이 날은 전세계 사회주의 국가들에게는 위대한 날인 동시에 독일 제국주의자이 패배한 날이지요! 우리의 참관장교들은 혁명가들이 채택한 게릴라 전술을 연구했으며, 이는 여전히 유용하게 쓰일 수 있습니다."
 viet.10.a:0 "Congratulations!"
 
 viet.11.t:0 "인도차이나 반란이 성공하다"
-viet.11.d:0 "The peoples of Indochina have finally thrown of the yoke of colonial exploitation! This is a great day for all the socialist nations of the world and a major defeat for the German Imperialists! Our military observers in Indochina have studied the guerrilla tactics adopted by the revolutionaries, but their usefulness remain to be seen."
-viet.11.a:0 "Congratulations!"
+viet.11.d:0 "인도차이나인들은 마침내 식민 착취의 멍에를 떨춰냈습니다! 이 날은 전세계 사회주의 국가들에게는 위대한 날인 동시에 독일 제국주의자이 패배한 날이지요! 우리의 참관장교들은 혁명가들이 채택한 게릴라 전술을 연구했으며, 이는 여전히 유용하게 쓰일 수 있습니다."
+viet.11.a:0 "축하할 일이다!"
 
 viet.12.t:0 "유럽인 정착민들"
-viet.12.d:0 "About 20,000 European settlers living in Saigon is a troublesome issue to us. They served in colonial administration and monopolised almost all modern economy sectors in Indochina. While some revolutionaries decided to side with our just cause, most are die-hard reactionaries. How should we deal with them?"
+viet.12.d:0 "사이공에 아직도 남아있는 20,000명의 유럽인들이 우리에게 골치덩이로 작용하고 있습니다. 그들은 식민정부를 위해 일했고, 또한 우리 경제의 대부분을 차지했었습니다. 몇몇은 우리의 혁명적 대오에 편승하기로 했지만, 대부분은 반동세력이죠. 이들을 어떻게 처리하는게 좋을까요?"
 viet.12.a:0 "그들이 우리를 위해 일하도록 강요케하라!"
-viet.12.b:0 "Trade Unions takeover and decide!"
+viet.12.b:0 "노동조합이 탈취하고 결정할 것이다!"
 viet.12.c:0 "그들의 재산을 국유화하고 감옥에 넣어라!"
 
 viet.13.t:0 "종교 주제"
-viet.13.d:0 "Cochinchina is home to millions of Buddhists, Christians and Caodaists. For many years religion played a dominant role in people's life. With the establishment of our revolutionary government, these religious believers are on the brink of panic. We need to enlighten our people, but drastic methods might cause serious backlash, and damage our war effort."
+viet.13.d:0 "코친차이나(베트남 남부)에는 수백만의 불교도, 기독교도, 그리고 까오다이교도들이 살고 있습니다. 종교는 이들의 삶을 지배했지요. 우리의 혁명정부가 세워진 이래 종교 신자들은 큰 혼란에 빠졌습니다. 우리들은 신이 없다는 것을 널리 알려야 하지만 지나친 방법은 그들의 반발을 일으킬 수 있으며, 되려 우리의 노력은 헛수고가 될 수도 있습니다."
 viet.13.a:0 "세속 국가를 선언케한다."
 viet.13.b:0 "그들은 또한 애국자이며, 우리는 단결 할 필요가 있다."
 viet.13.c:0 "그들을 시민 종교로 통합하고 탈바꿈케하라."
 viet.13.e:0 "비밀리에 종교 지도자들을 제거하라"
 
 viet.14.t:0 "탈주 사태"
-viet.14.d:0 "Panicked by the revolution and the war, many Cao Dai believers and Catholics were deceived by their religious authority and decided to flee from our motherland. Hundreds of thousands of people try to escape from our control zone!"
-viet.14.a:0 "Traitors!"
+viet.14.d:0 "우리의 혁명과 전쟁으로 인해 충격에 휩싸인 많은 까오다이교도와 카톨릭교도들은 종교적 권위에 속아 조국을 도망치기로 결정했습니다. 수십만명이 우리가 통제하는 구역을 벗어나려 하고 있습니다!"
+viet.14.a:0 "반동놈들 같으니!"
 
 viet.15.t:0 "전쟁의 종결"
 viet.15.d:0 "The bloody war has come to an end, but its legacy is still haunting us. Unfortunately, many of our compatriots also served the enemy. The war witnessed children rebelling against their parents, wife prosecuting her husband, brothers killing each other. The Indochinese society is even more divided after reunited. How should we deal with this?"
