--- a/Kaiserreich Korean Translation/localisation/KR_Indochinese_Union_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Indochinese_Union_l_english.yml
@@ -119,17 +119,17 @@ INC_Dong_Viet:0 "Hang khong Dong Viet"
 INC_NADF:0 "Thong Nhat Aircraft Corporation"
 INC_Chim_Lac:0 "Vien thet kiet Chim Lac"
 INC_TLD:0 "Vien Ky thuat Co gioi Quan su"
-INC_Factorie_Z113:0 "Nha may Z113"
+INC_Factorie_Z113:0 "Z113 공장"
 INC_General_Equipment:0 "Tong Cuc Cong nghiep Quoc Phong"
-INC_Cong_Ty_36:0 "Nha may 36"
+INC_Cong_Ty_36:0 "36호 공장"
 INC_Dong_Bac:0 "Tong cong ty Dong Bac"
 
 INC_Truong_Chinh_hog_syn:0 "Dang Xuan Khu"
 ### Parties ###
 INC_totalist_party:0 "떤 비엣"
 INC_totalist_party_long:0 "신 베트남 혁명당(Tan Viet Cach mang Dang)"
-INC_radical_socialist_party:0 "Aspiration Society"
-INC_radical_socialist_party_long:0 "Aspiration Society(Hoi Kin Cao vong)"
+INC_radical_socialist_party:0 "열망하는 사회"
+INC_radical_socialist_party_long:0 "열망하는 사회(Hoi Kin Cao vong)"
 INC_syndicalist_party:0 "인도차이나 혁명회"
 INC_syndicalist_party_long:0 "인도차이나 혁명회(Hoi Dong Duong Cach mang)"
 INC_social_democrat_party:0 "베트남 국민당"
@@ -145,7 +145,7 @@ INC_authoritarian_democrat_party_long:0 "국가 연맹 블록(Khoi Quoc Gia Lian
 INC_paternal_autocrat_party:0 "왕당파"
 INC_paternal_autocrat_party_long:0 "왕당파(Dang Bao Hoang)"
 INC_national_populist_party:0 "까오 다이"
-INC_national_populist_party_long:0 "계시와 구원의 제3시대의 위대한 종교(Dai Dao Tam Ky Pho Do)"
+INC_national_populist_party_long:0 "계시와 구원의 제3시대 위대한 종교(Dai Dao Tam Ky Pho Do)"
 INC_Bolshie:0 "인도차이나 볼셰비키당"
 INC_Bolshie_long:0 "인도차이나 볼셰비키당"
 INC_DDQDD:0 "인도차이나 국민당"
@@ -188,7 +188,7 @@ INC_Liberation:0 "Our Comrades support our revolutionary movement!"
 INC_BHC_Support:0 "Bharatiya Commune chose to continue their support"
 INC_BHC_NoSupport:0 "Closer Tie refused"
 INC_BHC_Support_50:0 "바르티야 코뮌이 인도차이나 반군을 지원하고있다!"
-INC_BHC_Support_75:0 "바르티야 코뮌이 인도차이나 반군을 지원하고 있다!"
+INC_BHC_Support_75:0 "바르티야 코뮌이 인도차이나 반군을 지원하고있다!"
 INC_ImperialistScum:0 "Damn those German Imperialists!"
 INC_closer_ties:0 "Closer Ties"
 ### Events ###
@@ -308,13 +308,13 @@ viet.20.c:0 "작업장에서 기반으로 하는 선거가 좋게 들린다."
 
 viet.21.t:0 "새로운 정부"
 viet.21.d:0 "Nguyen An Ninh and the anarchists won a majority of seats in the National Assembly. Following the victory, Nguyen An Ninh declared that while the Assembly does offer a forum for popular expression, only through decentralisation and democratisation of localities, will the people be truly represented. This will, however, require a reorientation of the minds of the Indochinese people. Now it's time to decide the composition of new government."
-viet.21.a:0 "Keep the resistance cabinet led by Pham Van Dong, an ideal premier"
-viet.21.b:0 "A unity cabinet led by Chu Van Tan, a war hero"
-viet.21.c:0 "A radical cabinet led by Tran Van Giau, a fervent revolutionary"
+viet.21.a:0 "가장 알맞은 총리인 팜반동이 이끄는 항전 내각을 유지한다."
+viet.21.b:0 "전쟁의 영웅인 추반떤이 이끄는 통일 내각"
+viet.21.c:0 "열렬한 혁명가인 쩐 반 저우가 이끄는 급진적인 내각"
 
 viet.22.t:0 "새로운 정부"
 viet.22.d:0 "The Syndicalists won the majority of seats in the National Assembly. The new Assembly Chairman, Ta Thu Thau, declared that their ultimate goal is to abolish the National Assembly and establish a syndicalist political system. However, he admitted that transition to syndicalism in Indochina will be a long process and require much effort. Now it's time to decide the composition of new government."
-viet.22.a:0 "Keep the resistance cabinet led by Pham Van Dong, an ideal premier"
+viet.22.a:0 "가장 알맞은 총리인 팜반동이 이끄는 항전 내각을 유지한다."
 viet.22.b:0 "A unity cabinet led by Ton Duc Thang, a widely-respected union leader"
 viet.22.c:0 "A syndicalist cabinet led by Nguyen Van Cu, a syndicalist theorist"
 
@@ -382,12 +382,12 @@ viet.35.d:0 "The New Viet Revolutionary Party, also known as Tan Viet party, is 
 viet.35.a:0 "It's their freedom"
 viet.35.b:0 "We need to keep an eye on them"
 
-viet.36.t:0 "Socialist Opposition"
+viet.36.t:0 "사회주의자들의 반발"
 viet.36.d:0 "Our recent reform has angered the socialists. They claimed the nationalist government has deeply deviated from the revolutionary principle of Indochinese Union. The revolution should liberate Indochinese people from the yoke of capitalism and dictatorship, not just changing the race of the oppressor. They urged a return to true socialist direction."
 viet.36.a:0 "Maybe we did something wrong..."
 viet.36.b:0 "Ignore them"
 
-viet.37.t:0 "사회주의자의 사이공 봉기"
+viet.37.t:0 "사회주의자들의 사이공 봉기"
 viet.37.d:0 "The socialists and left-wing radicals rose up against the current government! A provisional revolutionary committee declared the continuous revolution to liberate our people from capitalism and dictatorship. Saigon worker militias tried to occupy key buildings but repelled by police. Meanwhile peasant rebels and mutinied soldiers are marching on Saigon! Will Saigon uprising happen again?"
 viet.37.a:0 "2차 혁명이 성공하였다!"
 viet.37.b:0 "간신히 절충안이 해결을 보았다."
@@ -407,7 +407,7 @@ viet.40.a:0 "자유주의자와 협조한다."
 viet.40.b:0 "완전한 정치적 자유를 되돌리게 한다"
 viet.40.c:0 "계엄령을 지속케한다."
 
-viet.41.t:0 "Remove Pham Van Dong"
+viet.41.t:0 "팜 반 동 제거"
 viet.41.d:0 "Pham Van Dong, despite all his merits, has a personality of administrator and intellectual rather than a real leader. He is considered too soft-willed and amicable to the enemy by the hardliners in the party. In the politburo meeting, Head of the Organization Department Le Duc Tho led an attack against Pham Van Dong. Le Duc Tho, with his authority brought by close connection to French Jacobin, claimed that Pham Van Dong doesn't really understand the ideology of Leninism. It would be better for Dong to work as the prime minister."
 viet.41.a:0 "Pham Van Dong was sidelined and Le Duc Tho took charge"
 viet.41.b:0 "Pham Van Dong seek support from outside of the party"
@@ -504,7 +504,7 @@ viet.80.d:0 "This morning, the German began a bombardment of the city of Saigon,
 viet.80.a:0 "Damn it."
 
 
-viet.81.t:0 "New Textbooks"
+viet.81.t:0 "새로운 교범"
 viet.81.d:0 "In order to awaken the militaristic spirit inherent to Indochinese people, we have introduced a complete set of reform to our education system including military training in elementary school, weapon using courses and new textbooks. Here is an example from grade 2 math textbook:\n\nOne Indochinese soldier can kill five Huns.\nIf seven Indochinese soldiers fight forty-three Hunnic scums, how many Hunnic bandits will live?"
 viet.81.a:0 "8?"
 viet.81.b:0 "All Huns are Killed!"
@@ -602,32 +602,32 @@ viet.97.a:0 "Hue!Hue!Hue!"
 
 #1948 - 250th anniversary of Sai Gon
 
-viet.110.t:0 "Searching for Brother Ho"
+viet.110.t:0 "호치민 형제를 찾아서"
 viet.110.d:0 "Although official record states that Comrade Ho Chi Minh, or better known as Nguyen Ai Quoc back in Paris, was killed in 1926 during the German intervention, there was no solid evidence that he is dead aside from the dubious German claim. There were rumors that Ho Chi Minh actually escaped from that disaster and hid in southern China organising a guerrilla. Although it might be unlikely that he is still alive, people still wonder about Brother Ho's fate. With the help of a friendly Chinese government, it's now possible to conduct an investigation in southern China of this..."
-viet.110.a:0 "It's good to have a try"
-viet.110.b:0 "We already know he died"
+viet.110.a:0 "함 시도해보는게 좋다."
+viet.110.b:0 "우리는 이미 그가 죽었다는 것을 안다."
 
-viet.111.t:0 "We found Brother Ho's wife?"
+viet.111.t:0 "호치민 형제의 아내를 찾았다?"
 viet.111.d:0 "During our investigation, we found a woman in Guangzhou, Tang Tuyet Minh, claiming she was brother Ho's wife. The legal witnesses of their marriage in China, Cai Chang and Deng Yingchao, confirmed the fact and we also found notes and letters written by Ho Chi Minh in her collection. However, brother Ho's celibacy has been a symbol of his dedication to the revolution. It might be embrassing to admit this marriage..."
-viet.111.a:0 "Invite her to Indochina"
-viet.111.b:0 "This should remain a secret, Brother Ho is only married to revolution"
+viet.111.a:0 "그녀를 인도 차이나에 초대하자"
+viet.111.b:0 "이건 비밀로 남아있어야 한다, 호 형제는 오직 혁명과 결혼하였다."
 
-viet.112.t:0 "The legend of Guangxi guerillas"
+viet.112.t:0 "광시 게릴라의 전설"
 viet.112.d:0 "Our investigation of Brother Ho continues. There was a rumor in southern China that some ethnic minorities conducted a guerrilla warfare in Guangxi against local warlords in the late 1920s. Maybe it has some connections with comrade Ho Chi Minh."
-viet.112.a:0 "Interesting"
+viet.112.a:0 "흥미롭구만"
 
 viet.113.t:0 "광시 게릴라들의 운명"
 viet.113.d:0 "We tried to find Ho Chi Minh's trace in Guangxi. It's clear that there was a guerrilla movement in Sino-Vietnamese in the late 1920s. However, it was finally suppressed by Guangxi warlord in 1932 and the leaders of the guerillas were arrested and executed. Many of the executed leaders, according to the locals, are Vietnamese. This seems to be the fate of comrade Ho Chi Minh. Should we conclude our search?"
-viet.113.a:0 "Continue"
-viet.113.b:0 "We already know the answer..."
+viet.113.a:0 "계속하자"
+viet.113.b:0 "우리는 이미 답을 알고 있다..."
 
-viet.114.t:0 "More Evidences from Guangxi"
+viet.114.t:0 "광시에서 더 많은 증거"
 viet.114.d:0 "We continued our research in Guangxi and the result was out of our expectation. We discovered that some guerillas were arrested and imprisoned in Nanning due to lack of evidences. Later in 1933 they were released by Guangxi warlord under the pressure of Chinese progressives including Guangdong warlord Chen Jiongming. Among those released guerillas, one man named Hu Guang left his diary to a local intellectual who helped him during the prison time. We confirmed that the diary is actually written by Ho Chi Minh. It seems that comrade Ho managed to hid his identity and survived. The Prison Diary of Ho Chi Minh is now transfered to the Museum of Indochinese Revolution in Saigon."
-viet.114.a:0 "Interesting"
+viet.114.a:0 "흥미로운 사실이군"
 
-viet.115.t:0 "The fate of Brother Ho"
+viet.115.t:0 "호치민 형제의 운명"
 viet.115.d:0 "We finally found a decisive evidence about Brother Ho's fate in the secret police documents of the Legation cities and now we are able to reconstruct the fate of Ho Chi Minh. After the crackdown in 1926, Ho continued to conduct guerrilla warfare in southern China. The guerrilla was suppressed by Guangxi warlords and Ho was arrested. However, the warlord didn't know who is him and released him. Comrade Ho decided to leave China for France but he was captured by the Legation city's police in Hongkong in 1933 and German secret polices figured out Ho's identity. Because Germans didn't want to repeat the mass demonstration after Phan Boi Chau's execution in 1925, Ho was secretly executed in Hongkong. This untold story will not be forgotten by Indochinese people henceforth."
-viet.115.a:0 "May your spirit protect our motherland"
+viet.115.a:0 "당신의 영혼이 우리 조국을 보호하길"
 
 viet.130.t:0 "New foreign exchange earner!"
 viet.130.d:0 "We are running out foreign exchange and new foreign exchange earner is needed to finance our weapon purchasing. While our peasants have been encouraged to cultivate cash crops. What should we do with the most profitable one-opium is still undecided.Of course opium production brought by colonisers is condemned by us, but desperate times require desperate measures...."
@@ -666,7 +666,7 @@ viet.136.b:0 "We no longer need Mafias!"
 
 viet.137.t:0 "사이공에서의 교전"
 viet.137.d:0 "Binh Xuyen Gang, an organised crime syndicate in Saigon, felt endangered by our policy, decided to launch a desperate attack against us. After initial small-arms fire and mortar exchanges, the a large part of the densly populated inner city was engulfed in bloody house-to-house combat. Finally, Saigon worker militia and local garrisons decided to deploy heavy weapons to crush the resistance of mafias. Hundreds of civilians were killed and the many people's houses were levelled. It will take some time for Saigon to recover."
-viet.137.a:0 "Woops"
+viet.137.a:0 "이런"
 
 viet.138.t:0 "The Integration of Binh Xuyen"
 viet.138.d:0 "Binh Xuyen members have gradually learned the merit of socialist society and renounce their criminal activities, now the newly born Binh Xuyen society has joined Saigon municipal administration and the former armed gang have been integrated into our army."
