--- a/Kaiserreich Korean Translation/localisation/KR_Cuba_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Cuba_l_english.yml
@@ -22,7 +22,7 @@ CUB_social_liberal_party:0 "쿠바 자유당"
 CUB_social_liberal_party_long:0 "쿠바 자유당"
 CUB_market_liberal_party:0 "쿠바 자유당"
 CUB_market_liberal_party_long:0 "쿠바 자유당"
-CUB_social_conservative_party:0 ""헌법연합당"
+CUB_social_conservative_party:0 "헌법연합당"
 CUB_social_conservative_party_long:0 "헌법연합당"
 CUB_authoritarian_democrat_party:0 "쿠바 진보파"
 CUB_authoritarian_democrat_party_long:0 "쿠바 진보파"
