--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -307,13 +307,13 @@ annex.86.a:0 "A new era for Britain - Restore the House of Stuart"
 annex.86.b:0 "Stick to our original idea, setup a military cabinet"
 annex.87.t:0 "잉글랜드와 스코틀랜드의 새로운 지도자"
 annex.87.d:0 "As we organise new governments in Britain, the establishment of cabinets of collaborationist generals seemed as the most wise solution. However, Don Jacobo FitzJames Stuart, a Spanish Duke and descendant of the old Catholic House of Stuart has, for the first time, presented his claims to the British thrones. Despite Papal pressure, we should keep in mind that even the slight idea of a Catholic king is likely to set the British people into a heavy riot..."
-annex.88.t:0 "윈난의 운명"
+annex.88.t:0 "운남의 운명"
 annex.88.d:0 "Following the war against the Yunnan warlords on the mountains of Southwest China, we are now under control of several lands once held by that puny clique. What shall we do with them now? We could transfer the territory to our Chinese partners, or direct control it as a new colony, or even setup a new independent republic in Yunnan, albeit under a friendly government."
 annex.88.a:0 "영토를 일반 동아시아 회사에 이양한다"
 annex.88.b:0 "영토를 중화민국에 반환한다"
 annex.88.c:0 "이 땅들은 청제국에 속해야한다"
-annex.88.e:0 "윈난에 새 황실 식민지를 설립한다"
-annex.88.f:0 "독립된 윈난 공화국을 설립한다"
+annex.88.e:0 "운남에 새 황실 식민지를 설립한다"
+annex.88.f:0 "독립된 운남 공화국을 설립한다"
 annex.89.t:0 "스위스의 운명"
 annex.89.d:0 "All across the old Swiss Confederation, the French-, German- and Italian-speaking cantons are starting to experience small-scale revolts against our garrisons. Granting independence to the Swiss would appease this dissent, while also guaranteeing another valuable member into our alliance. Some right-wing politicians, however, propose a complete dissolution of the old Confederation, annexing the German-speaking areas to the Reich - or maybe even a partition of Switzerland with France and Italy."
 annex.89.a:0 "모든 주를 라이히에 합병하라"
@@ -464,13 +464,13 @@ annex.124.t:0 "남서부 중국의 운명"
 annex.124.d:0 "남서부 중국에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.124.a:0 "군사점령을 계속하라!"
 annex.124.b:0 "지역 공화주의 운동을 지원하라!"
-annex.124.c:0 "윈난 공화국을 세워라!"
+annex.124.c:0 "운남 공화국을 세워라!"
 annex.124.e:0 "중화인민공화국을 세워라!"
 annex.124.f:0 "충성스러운 동맹에 이 땅을 넘겨주어라..."
 annex.125.t:0 "남중국의 운명"
 annex.125.d:0 "남중국에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.125.c:0 "일반 동아시아 회사를 복원해라"
-annex.125.g:0 "광시 공화국을 해방하라"
+annex.125.g:0 "광서 공화국을 해방하라"
 annex.126.t:0 "티베트의 운명"
 annex.126.d:0 "티벳 고원에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.126.c:0 "독립된 티베트를 다시 만들어라"
@@ -711,8 +711,8 @@ annex.176.t:0 "북서부 중국의 운명"
 annex.176.d:0 "북서부 중국의 스텝에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.176.a:0 "군사점령을 계속해라!"
 annex.176.b:0 "충성스러운 동맹에 이 땅을 넘겨주어라..."
-annex.176.c:0 "충성스러운 시베이싼마를 해방하라"
-annex.176.e:0 "충성스러운 위구리아와 시베이싼마를 해방하라"
+annex.176.c:0 "충성스러운 서북삼마를 해방하라"
+annex.176.e:0 "충성스러운 위구리아와 서북삼마를 해방하라"
 annex.177.t:0 "몽골의 운명"
 annex.177.d:0 "몽골 스텝에서의 성공적인 작전으로 미친 남작을 박살낸 후, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.177.a:0 "군사점령을 계속해라!"
@@ -727,7 +727,7 @@ annex.178.c:0 "지역 공화주의 운동을 지지한다!"
 annex.178.e:0 "노동 조합 연방을 세워라!"
 annex.178.f:0 "충성스러운 동맹에 이 땅을 넘겨주어라..."
 annex.179.t:0 "상청의 운명"
-annex.179.d:0 "산시 지방 산에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
+annex.179.d:0 "산서 지방 산에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.179.a:0 "군사점령을 계속해라!"
 annex.179.b:0 "충성스러운 상청천국을 해방하라"
 annex.179.c:0 "지역 공화주의 운동을 지지한다!"
