--- a/Kaiserreich Korean Translation/localisation/KR_Shanqing_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Shanqing_l_english.yml
@@ -37,7 +37,7 @@ GER_MANCHU_EMP:0 "독일이 우리의 만주 제국을 비용으로 지원함"
 JAP_PuYi_YES:0 "일본이 푸이를 보냄"
 JAP_PuYi_NO:0 "일본이 푸이를 보내지 않음"
 SQI_Funds_rev_south:0 "상청이 남부의 혁명을 지원함"
-SQI_DEM_VLA:0 "상청이 블라보스토크를 요구함"
+SQI_DEM_VLA:0 "상청이 블라디보스토크를 요구함"
 SQI_DEM_SAS_GER:0 "상청이 동남아시아를 요구함"
 SQI_DEM_SAS:0 "상청이 동남아시아를 요구함"
 TIAN_south_AOG:0 "천이 남쪽을 확장함"
