--- a/Kaiserreich Korean Translation/localisation/KR_Ireland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ireland_l_english.yml
@@ -1632,8 +1632,8 @@ ire.229.a:0 "그래도 다행이군.."
 ire.230.t:0 "독일 경제가 회복되다"
 ire.230.d:0 "독일의 경제가 마침내 검은 월요일에서 회복되어 아일랜드와 독일 사이의 무역이 완전히 재개되었다."
 ire.230.a:0 "훌륭하군!"
-ire.231.t:0 "전쟁은 경제를 일으키다"
-ire.231.d:0 "아일랜드에서의 전쟁 발발은 우리 경제가 블검은 월요일에서 회복하는 것을 도왔습니다."
+ire.231.t:0 "전쟁 경제를 일으키다"
+ire.231.d:0 "아일랜드에서의 전쟁 발발은 우리 경제가 검은 월요일에서 회복하는 것을 도왔습니다."
 ire.231.a:0 "그래도 다행이군.."
 ire.232.t:0 "협상국과의 무역"
 ire.232.d:0 "이제 우리가 협상국과의 관계를 시작했으니 우리 경제는 대영제국과의 무역으로 크게 발전했습니다. 아마도 국민중앙당이 내내 옳았을 것입니다."
