--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -1,7 +1,7 @@
 l_english:
 
 worldnews.1.t:0 "제2차 미국 내전"
-worldnews.1.d:0 "사정을 알지 못하는 이에게는 미국의 위기가 갑자기 발생한 것으로 보일 수도 있겠지만, 전문가들은 지난 수년간 내전 발발의 조짐이 보였다는 것에 동의합니다. 1925년 뉴욕 증권 거래소가 붕괴한 이래로 미국 경제는 꾸준히 침체기에 접어 들었습니다. \n이제 미국은 기존 정부의 지지자들, 생디칼리즘을 내세운 아메리카 노동 연합, 우파 미주 연합의 3자간 내전으로 돌입했습니다. 전세계에서 온 자원병들이 자신들이 지지하는 진영을 위해 싸운다는 보고가 있었습니다. 어쩌면 2차 아메리카 내전은 다양한 이념으로 힘든 시기에 그저 서로 다른 이념간에 벌어질 많은 전쟁 중 하나일 뿐일 수도 있습니다."
+worldnews.1.d:0 "사정을 알지 못하는 이에게는 미국의 위기가 갑자기 발생한 것으로 보일 수도 있겠지만, 전문가들은 지난 수년간 내전 발발의 조짐이 보였다는 것에 동의합니다. 1925년 뉴욕 증권 거래소가 붕괴한 이래로 미국 경제는 꾸준히 침체기에 접어 들었습니다. \n이제 미국은 기존 정부의 지지자들, 생디칼리즘을 내세운 아메리카 노동 연맹, 우파 미주 연합의 3자간 내전으로 돌입했습니다. 전세계에서 온 자원병들이 자신들이 지지하는 진영을 위해 싸운다는 보고가 있었습니다. 어쩌면 2차 미국 내전은 다양한 이념으로 힘든 시기에 그저 서로 다른 이념간에 벌어질 많은 전쟁 중 하나일 뿐일 수도 있습니다."
 worldnews.1.a:0 "미국의 운명이 위험에 처해있군."
 
 worldnews.2.t:0 "사보이 위기가 해결되다"
@@ -89,11 +89,11 @@ worldnews.20.t:0 "미국 민주주의의 종식"
 worldnews.20.d:0 "놀라운 뉴스가 오늘 미국에서 도착했습니다. 분열된 국가를 안정시키지 못하고 아메리카 노동 연맹과 미국 제일당 무장 세력을 진정시킬 수 없다는 것을 증명한 하버드 후버 대통령의 정부는 더글라스 맥아더 장군에게 군부와 기업 대표들과 함께 이 나라의 고삐를 맡을 것을 요청했습니다. \n\n 맥아더 대통령은 '철권 통치'의 강력한 지지자이며 생디칼리즘과 미국 평화주의에 반대합니다. '미국의 적'에 대한 대규모 단속은 이미 보고된바 있습니다."
 worldnews.20.a:0 "골치 아프군."
 
-worldnews.21.t:0 "휴이 롱이 미국 대통령으로 선출되었습니다"
+worldnews.21.t:0 "휴이 롱이 미국 대통령으로 선출되다"
 worldnews.21.d:0 "1925년 대공황 이래 미국 전역에 만연한 큰 혼란에도 불구하고 대통령 선거가 진행되어 투표 결과가 발표되었습니다. 미국 제일당의 휴이 롱이 미국의 32대 대통령이 되었습니다. \n\n휴이 롱은 루이지애나에서 성공한 주지사로 유명하지만, 대중주의 정책과 정치인들과 싸우기 위한 준 군사적인 민병대의 사용에 대해 많은 비판을 받았습니다. 아메리카 노동 연맹은 롱이 선거 결과를 조작했다고 주장하면서 선거 결과에 대해서 이의를 제기하고 있습니다."
 worldnews.21.a:0 "남부인이 대통령으로서 무엇을 할 수 있을지 보자."
 
-worldnews.22.t:0 "잭 리드가 미국 대통령으로 선출되었습니다"
+worldnews.22.t:0 "잭 리드가 미국 대통령으로 선출되다"
 worldnews.22.d:0 "1925년 대공황 이래 미국 전역에 만연한 큰 혼란에도 불구하고 대통령 선거가 진행되어 투표 결과가 발표되었습니다. 아메리카 노동 연맹의 잭 리드가 미국의 32대 대통령이 되었습니다. \n\n잭 리드는 생디칼리즘의 지지자로, 러시아에서 지낼동안 유능한 정치인이 되었습니다. 이런 태도로 인해 미국 사회에서 많은 적을 만들었지만 그가 이끌고있는 노동 연맹은 여전히 강합니다. 미국 제일당은 이미 선거 결과에 이의를 제기하고는 있습니다..."
 worldnews.22.a:0 "이 저널리스트가 무엇을 할 수 있을지 보자."
 
@@ -422,7 +422,7 @@ worldnews.96.d:0 "매우 낮은 확률에도 불구하고 리투아니아 공화
 worldnews.96.a:0 "군주에서 졸개 중 하나로..."
 
 
-worldnews.97.t:0 "존 낸스 가너가 미국 대통령으로 선출되었습니다."
+worldnews.97.t:0 "존 낸스 가너가 미국 대통령으로 선출되다."
 worldnews.97.d:0 "1925년 대공황 이후 미국 전역에 만연한 대규모 불안정에도 불구하고 대통령 선거가 진행되었고 투표 결과가 발표되었습니다. 민주당 후보인 존 낸스 가너가 미국의 32대 대통령으로 당선되었습니다. \n\n 가너는 1932년 민주당 예비 선거에서 패배했지만, 민주주의를 지키고 심지어 야만적인 방법을 동원하면서 아메리카 노동 연맹과 미국 제일당과의 싸움에 초점을 맞춘 캠페인으로 돌아 왔습니다. 이 자세는 미국의 좌파와 우파의 급진주의자들을 불안하게 했고, 연합의 정치 위기는 더욱 악화 될 수도 있습니다..."
 worldnews.97.a:0 "우리는 지켜보야한다."
 
